client 사이드 수정

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -7,21 +7,24 @@
     "paths": {
       "@src/*": ["src/*"],
       "@react/*": ["custom_modules/react/*"],
-      "@router/*": ["custom_modules/router/*"]
+      "@router/*": ["custom_modules/router/*"],
+      "@api/*": ["custom_modules/api/*"],
+      "@redux/*": ["custom_modules/redux/*"],
+      "@storage/*": ["custom_modules/storage/*"],
     },
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext", "ES2015"],
-  "skipLibCheck": true,
+    "skipLibCheck": true,
     "esModuleInterop": true,
     "strict": true,
-    "noImplicitThis": false,
-    "noImplicitAny": true,
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
+    "noImplicitThis": false,
+    "noImplicitAny": true,
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true
   },
   "exclude": ["node_modules"],
-  "include": [".", "src_ts/**/*", "./types", "declaration.d.ts", "global.d.ts"]
+  "include": [".", "src/**/*", "./types", "declaration.d.ts", "global.d.ts"]
 }
